# reddit-clone-backend

./: .coverage  .gitignore  ARCHITECTURE_DIAGRAM.md  DEVELOPMENT_ROADMAP.md  LOCAL_TESTING_README.md  POSTMAN_SETUP_GUIDE.md  PROJECT_REPORT.md  README.md  SIMPLE_ARCHITECTURE.md  TESTING.md  TEST_SCRIPTS_README.md  WARP.md  add_all_handlers.py  api_server.py  cdk.json  check_cors_apis.py  demo_user_flow.py  deploy_with_tests.py  env_vars.json  fix_posts_handlers.py  generate_jwt_tokens.py  lambda_handler.py  lambda_handler_auth_posts.py  lambda_handler_comments.py  lambda_handler_feeds.py  lambda_handler_phase2.py  lambda_handler_simple.py  lambda_handler_standalone.py  lambda_handler_subreddits.py  lambda_handler_user_profile.py  pyproject.toml  quick_test.py  quick_test_simple.py  requirements-lambda-simple.txt  requirements-lambda-v1.txt  requirements-lambda.txt  requirements.txt  response.json  run_api_tests.py  run_tests.py  (+20 more)
docs/: README.md  Reddit_Clone_Backend_v2.4.postman_collection.json  Reddit_Clone_Backend_v2.5.postman_collection.json  Reddit_Clone_News_Feed_APIs.postman_collection.json  Reddit_Clone_Subreddit_APIs.postman_collection.json  api-contract.md  database-schema.md  development-roadmap.md  frontend-integration-guide.md  lambda-architecture.md  news-feed-design.md  openapi-spec.yaml  postman-collection.json
infrastructure/: app.py  reddit_clone_stack.py  reddit_clone_stack_fixed.py
lambda-deployment/: __init__.py  comment_handler.py  comment_models.py  comment_service.py  feed_models.py  feed_service.py  lambda_handler_auth_posts.py  lambda_handler_phase2.py  lambda_handler_simple.py  lambda_handler_standalone_v1.py  lambda_handler_user_profile.py  requirements.txt  response.json  simple_handler.py  simple_test.py  subreddit_service.py  test_debug.py  test_imports.py  test_payload.json  test_simple.py  user_profile_service.py
lambda-deployment/auth/: __init__.py  auth_service.py
lambda-deployment/botocore-1.31.57.dist-info/: RECORD
lambda-deployment/shared/: __init__.py  aws_clients.py
lambda-deployment/src/: __init__.py
lambda-layer/: comment_models.py  comment_service.py  feed_service.py  lambda_handler_auth_posts.py  lambda_handler_comments.py  lambda_handler_subreddits.py  lambda_handler_user_profile.py  subreddit_service.py  user_profile_service.py
lambda-layer/lambda/: comment_models.py
lambda-layer/lambda_code/: comment_handler.py  feed_service.py  models.py  posts_service.py  subreddit_models.py  subreddit_service.py
lambda-layer/shared/: aws_clients.py
report/: 23730043-23730027-report phase 1.md  DEVELOPMENT_ROADMAP.md
scripts/: build-lambda.py  deploy-fixed.sh  deploy.py  download-deps.py
src/lambda/: comment_service.py  feed_models.py  feed_service.py  posts_handler.py  (+3 more)
tests/: README.md  conftest.py
(+23 files in other folders)
